2004-11-30  Chris Dunlap  <cdunlap@llnl.gov>

	* config/Make-rpm.mk: Updated to reflect changes to META.

	* src/munged/munged.8.in: Updated info for '--force' cmdline opt.

2004-11-29  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munged/conf.c: Added <sys/socket.h> for AF_INET.

	* config/x_ac_check_cond_lib.m4, config/x_ac_check_fifo_recvfd.m4,
	  config/x_ac_check_peercred.m4, config/x_ac_check_pthreads.m4,
	  config/x_ac_debug.m4: Tweaked docs to be consistent with others.

	* configure.ac, config/x_ac_check_ssl.m4: Added X_AC_CHECK_SSL.

2004-11-24  Chris Dunlap  <cdunlap@llnl.gov>

	* src/libmunge/munge_ctx.3.in, src/munge/munge.1.in,
	  src/munge/unmunge.1.in: Updated verbage.

	* src/munge/unmunge.c:
	  Changed MUNGE_KEY_ORIGIN to MUNGE_KEY_ENCODE_HOST.
	  Tweaked munge_keys[] strings.

	* configure.ac, config/x_ac_aix.m4:
	  Added X_AC_AIX to enable run-time linking under AIX.

2004-11-23  Chris Dunlap  <cdunlap@llnl.gov>

	* src/libcommon/Makefile.am, src/libcommon/m_msg.c,
	  src/libcommon/m_msg.h, src/libcommon/msg.c, src/libcommon/msg.h,
	  src/libmunge/Makefile.am, src/libmunge/m_msg_client.c,
	  src/libmunge/m_msg_client.h, src/libmunge/msg_client.c,
	  src/libmunge/msg_client.h:
	  Renamed src/libcommon/msg.[ch] to m_msg.[ch].
	  Renamed src/libmunge/msg_client.[ch] to m_msg_client.[ch].
	  Changed "msg_" prefix to "m_msg_".  All callers changed.
	  Fixed "previous declaration of 'msg_t'" error under AIX.

	* src/libmunge/Makefile.am:
	  Added -export-symbols-regex to libmunge.

	* src/libcommon/Makefile.am, src/libcommon/msg.c, src/libcommon/msg.h,
	  src/libcommon/munge_msg.c, src/libcommon/munge_msg.h:
	  Renamed src/libcommon/munge_msg.[ch] to msg.[ch].
	  Removed "munge_" prefix on all "munge_msg_*" functions.
	  All callers changed.
	* src/libmunge/ctx.c, src/libmunge/ctx.h:
	  Removed unnecessary include for munge_msg.h.

2004-11-18  Chris Dunlap  <cdunlap@llnl.gov>

	* src/libmunge/enum.c: